--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -410,6 +410,15 @@
       "contributions": [
         "tds"
       ]
+    },
+    {
+      "login": "nicmak",
+      "name": "Nicholas Mak",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/22725151?v=4",
+      "profile": "https://github.com/nicmak",
+      "contributions": [
+        "tds"
+      ]
     }
   ]
 }
